k8s/calc-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: calc
  name: calc
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: calc
  template:
    metadata:
      labels:
        app: calc
    spec:
      containers:
      - image: v4nikishin/calc
        name: calc
        ports:
        - containerPort: 8000
