k8s/calc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calc
  name: calc
spec: 
  selector:
    app: calc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
